--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -76,6 +76,29 @@ font-size: 1.6rem;
 color: rgba(0, 52, 97, 0.934);
 }
 
+.deleteOrderButton::after {
+    content: "delete order";
+  position: absolute;
+    bottom: 90%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+ }
+ .deleteOrderButton:hover::after {
+    opacity: 1;
+    z-index: 99999999;
+ }
+
 .adminNav {
 display: flex;
 gap: 1rem;
@@ -640,3 +663,48 @@ top: 10.9rem;
     height: 50px;
   }
 }
+
+
+
+.deleteUserButton {
+    position: relative;
+    left: 95%;
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+    font-size: 1.6rem;
+    font-family: cursive;
+    color: #003550ea;
+}
+
+.deleteUserButton:hover {
+    color: rgb(78, 52, 170);
+    scale: 1.2;
+}
+.deleteUserButton:active {
+    color: #003550ea;
+    scale: 1;
+}
+
+.deleteUserButton::after {
+    content: "delete user";
+  position: absolute;
+    bottom: 90%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+ }
+ .deleteUserButton:hover::after {
+    opacity: 1;
+    z-index: 99999999;
+ }
