--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -75,7 +75,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
     margin-top: 2.5rem;
     margin-right: 1rem;
     margin-bottom: 5.1rem;
-    box-shadow: 0 22px 22px rgba(241, 200, 111, 0.574);
+    box-shadow: 0 22px 22px rgba(0, 128, 148, 0.105);
     border-radius: 1rem;
     
 }
@@ -83,7 +83,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
 .categoryName.active {
     background-color: rgb(255, 255, 255); /* or any highlight you want */
     font-weight: bold;
-    box-shadow: 0 22px 22px rgba(0, 28, 43, 0.151);
+    box-shadow: 0 22px 22px rgba(0, 109, 168, 0.437);
   }
 
   .categoryNName {
@@ -107,7 +107,7 @@ background-color: rgba(0, 255, 179, 0.576)!important;
 }
 
 .categoryName {
-background-color: rgba(255, 255, 255, 0.334);
+background-color: rgba(255, 255, 255, 0.97);
 width: 8rem;
 height: 3.8rem;
 display: flex;
@@ -118,7 +118,7 @@ font-size: 1.25rem;
 position:relative;
 border: 2px rgb(226, 142, 142);
 border-radius: 0.5rem;
-box-shadow: 0 22px 22px rgba(193, 200, 209, 0.574);
+box-shadow: 0 22px 22px rgba(193, 200, 209, 0.324);
 cursor: pointer;
 transition: 0.25s;
 }
@@ -1018,4 +1018,78 @@ gap: 1rem;
   position: relative;
   left: 0.7rem;
   width: 7rem;
+}
+
+// Adv Slider //////////////
+
+
+.slider-container {
+  width: 100%;
+  max-width: 259px;
+  height: 1000px;
+  overflow: hidden;
+  position: absolute;
+  margin: auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+  z-index: -9999;
+  left: 0.5rem;
+  top: 27.5rem;
+}
+
+.slider-image-wrapper {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.slider-image-wrapper img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.slider-image-wrapper img.active {
+  opacity: 1;
+  z-index: 1;
+}
+
+
+
+
+.slider-container1 {
+  width: 100%;
+  max-width: 1890px;
+  height: 259px;
+  overflow: hidden;
+  position: absolute;
+  margin: auto;
+  border-radius: 8px;
+  box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
+  z-index: -9999;
+  margin-left: 0.5;
+  top: 0;
+}
+
+.slider-image-wrapper1 {
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
+
+.slider-image-wrapper1 img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0;
+  transition: opacity 1s ease;
+}
+
+.slider-image-wrapper1 img.active {
+  opacity: 1;
+  z-index: 1;
 }
