--- a/src/app/sales/sales.component.scss
+++ b/src/app/sales/sales.component.scss
@@ -25,6 +25,12 @@ transition: 0.3s;
     scale: 1.1;
 }
 
+.discount {
+    position: absolute;
+    left: -49.8rem;
+    top: 2.5rem;
+}
+
 
 
 .product {
