--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -194,6 +194,10 @@ left: -1.5rem;
 color: #005b829e;
 }
 
+.usrRole {
+    color: #5d0000;
+}
+
 .userFavProdIdsDiv {
     display: flex;
     gap: 0.5rem;
