--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -18,8 +18,9 @@
             <h5>firstname: {{user?.firstName}}</h5>
             <h5>lastname: {{user?.lastName}}</h5>
             <h6>user role: {{user?.role == 0 ? 'user' : user?.role == 1 ? 'manager' : user?.role == 3 ? 'Admin' : 'role not assigned'}}</h6>
+            <h6>profile created: {{user?.createdAt}}</h6>
         </div>
-        
+
     </div>
 
 
