--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -23,6 +23,10 @@ position: relative;
 top: 2rem;
 }
 
+.userRole {
+    color: rgb(127, 0, 0);
+}
+
 .userDiv i {
     font-size: 4.7rem;
     color: rgba(0, 73, 62, 0.848);
