--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -72,6 +72,14 @@ top: 2rem;
     background-color: rgb(138, 0, 0);
 }
 
+.myOrdersh4 {
+    margin-left: 0.7rem;
+    margin-bottom: 0.9rem;
+    font-family: cursive;
+    font-weight: 700;
+    color: rgb(63, 0, 122);
+}
+
 .ordersDiv {
     padding: 1rem;
     flex-direction: column;
@@ -87,7 +95,8 @@ top: 2rem;
 .decorOrdersDiv {
     display: flex;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 6rem;
+    padding-bottom: 5rem;
 }
 
 .orderCard p {
@@ -99,17 +108,17 @@ top: 2rem;
     width: 10rem;
 }
 .orderItems p {
-width: 11rem;
+width: 14rem;
 }
 
 .orderCard {
     display: flex;
     background-color: rgba(0, 100, 104, 0.436);
-    padding: 1.5rem;
+    padding: 2.5rem;
     border-radius: 0.5rem;
-    width: 40rem;
-    margin-bottom: -1rem;
-    height: 17rem;
+    width: 44rem;
+    margin-bottom: -4rem;
+    height: 16rem;
     font-family: cursive;
 }
 .delivery-tracker {
@@ -118,10 +127,16 @@ width: 11rem;
   background-color: #ddd;
   border-radius: 8px;
   margin-right: 3rem;
-  top: 12rem;
+  top: 7rem;
   margin-left: -7rem;
   user-select: none;
   width: 15.8rem;
+}
+
+.orderId {
+    font-size: 1.2rem;
+    font-family: cursive;
+    font-weight: 600;
 }
 
 .fill-bar {
