--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -13,17 +13,17 @@
     <div class="userInfoDiv">
           
         <div class="userDiv">
-            <i class="fa-solid fa-user-tie"></i>
+            <i class="profilePic fa-solid fa-user-tie"></i>
             <h3>e-mail: {{user?.email}}</h3>
             <h5>firstname: {{user?.firstName}}</h5>
             <h5>lastname: {{user?.lastName}}</h5>
             <h6 class="userRole">user role: {{user?.role == 0 ? 'user' : user?.role == 1 ? 'manager' : user?.role == 2 ? 'Admin' : 'role not assigned'}}</h6>
             <h6>profile created: {{user?.createdAt}}</h6>
+            <i *ngIf="activePanel === 'userInfo'" class="editLogo fa-solid fa-user-pen"></i>
         </div>
 
         
     </div>
-<button class="editProfileButton" *ngIf="activePanel === 'userInfo'">edit profile</button>
 
     <div class="ordersDiv" *ngIf="activePanel === 'orders'">
        
