--- a/src/app/admin-interface/admin-interface.component.scss
+++ b/src/app/admin-interface/admin-interface.component.scss
@@ -536,6 +536,7 @@ top: 10.9rem;
     height: 40px;
 }
 
+
 .saleInputs input {
     border-radius: 0.5rem;
     background-color: rgba(0, 82, 98, 0.106);
@@ -763,3 +764,126 @@ top: 10.9rem;
     opacity: 1;
     z-index: 99999999;
  }
+
+
+
+ .hideEditLogo {
+    position: relative!important;
+    left: 70%!important;
+    color: #45a049!important;
+    font-size: 1.7rem!important;
+    top: -2rem;
+    cursor: pointer;
+ }
+
+  .hideEditLogo:hover {
+    scale: 1.1!important;
+    color: #9ab806!important;
+  }
+
+  .hideEditLogo::after {
+    content: "h i d e";
+    position: absolute;
+    bottom: 125%;
+    font-size: 0.7rem;
+    margin-left: -1.1rem;
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+  }
+.hideEditLogo:hover::after {
+opacity: 1;
+z-index: 9999999;
+   }
+   .inps {
+    display: flex;
+    flex-direction: column;
+    width: 17rem;
+    gap: 0.2rem;
+   }
+   outsideInps {
+    display: flex;
+    gap: 1rem;
+   }
+.userApplyButton {
+    position: absolute;
+    margin-left: 17.3rem;
+    width: 4.29rem;
+    padding-left: 0.1rem;
+    height: 5.9rem;
+    border-radius: 0.5rem;
+    background-color: #8f640048;
+    border: 1px solid rgba(0, 79, 83, 0.57);
+    font-family: cursive;
+    transition: 0.1s;
+   }
+
+.userApplyButton:hover {
+    background-color: #e09d00de;
+    scale: 1.1;
+    }
+
+    .userApplyButton:active {
+    background-color: #92660028;
+    scale: 1;
+    }
+
+.inps input {
+    height: 1.8rem;
+    background-color: rgba(0, 63, 106, 0.062);
+    border-radius: 0.5rem;
+    border: 1px solid rgba(0, 0, 0, 0.175);
+   }
+
+ .editLogo {
+    position: relative!important;
+    left: 80%!important;
+    color: #45a049!important;
+    font-size: 1.7rem!important;
+    top: -2rem;
+    cursor: pointer;
+ }
+
+
+
+  .editLogo:hover {
+    scale: 1.1!important;
+   color: #9ab806!important;
+  }
+
+   .editLogo:active {
+    scale: 1!important;
+    color: #45a049!important;
+}
+
+.editLogo::after {
+     content: "edit profile";
+  position: absolute;
+    bottom: 125%;
+    font-size: 0.7rem;
+    margin-left: -2rem; 
+    padding-right: 0.3rem;
+    padding-left: 0.3rem;
+    transform: translateX(-50%);
+    border-radius: 0.3rem;
+    background-color: #0000009f;
+    color: rgb(255, 255, 255);
+    white-space: nowrap;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease-in-out;
+    z-index: 999999999;
+}
+.editLogo:hover::after {
+    opacity: 1;
+    z-index: 99999999;
+}
+
