--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -175,10 +175,25 @@
             </div>
 
             </div>
-         
+
+
+         <div class="reviewScrollMain">
+          <h5 *ngIf="productReviews.length <= 0">no reviews on this one yet</h5>
+          <div class="decorInsideDiv" *ngIf="productReviews.length > 0">
+            <div class="reviewDiv" *ngFor="let review of productReviews">
+            <h5>user: </h5>
+            <p>user id: {{review.userId}}</p>
+            <p>rated with {{review.rating}} stars</p>
+            <p>comment: {{review.reviewText}}</p>
             </div>
+          </div>
+
+         </div>
+         
+        
+        </div>
           
-            
+
             <h2 class="seeAlso seeAlsoH2" *ngIf="suggestedProductsView.length <= 0">no similar products...</h2>
             <div class="seeAlso" *ngIf="suggestedProductsView.length > 0">
 
