--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -14,7 +14,7 @@
 
   
   <div class="ords" *ngIf="activePanel === 'orders'">
-    <h1>Orders:</h1>
+    <h1 class="ordersTitle">Orders:</h1>
 
   <div class="stats-chart">
   <h3>most to least ordered items for managing sales</h3>
