--- a/src/app/user-interface/user-interface.component.html
+++ b/src/app/user-interface/user-interface.component.html
@@ -54,6 +54,8 @@
                 <div class="ordersContainer" *ngFor="let order of fullOrders">
             <div class="orderCard">
                 <p class="orderId">order id: #{{order.id}}</p>
+                <h6 class="totalAmount">total: {{order.totalAmount}} $</h6>
+                <h6 *ngIf="order.promoCode" class="ifLambda">with promocode:{{order.promoCode}}</h6> 
        <div class="delivery-tracker">
   <div class="fill-bar" [style.width.%]="getFillWidthPercent(order.status)"></div>
 
@@ -65,13 +67,17 @@
 
   <i class="fas fa-motorcycle deliveryman" [style.left.%]="getFillWidthPercent(order.status)"></i>
 </div>
+
 <div class="scrollerOrd">
+    
                 <div class="orderItems" *ngFor="let item of order.orderItems">
                     <p>product name: {{item.productName}}</p>
                     <p>quantity: {{item.quantity}}</p>
                     <p>price: {{item.price}} $</p>
+                    <p>promo code: {{order.promoCode == null ? 'promo code not available' : order.promoCode }}</p>
                     <p *ngIf="item.discountedPrice > 0">discounted price: {{item.discountedPrice}} $</p>
                 </div>
+               
                 </div>
             </div>
             
