--- a/src/app/cart/cart.component.scss
+++ b/src/app/cart/cart.component.scss
@@ -24,12 +24,12 @@ gap: 3rem;
 
 }
 
-
-.stars {
-    position: relative;
-    top: 4.1rem;
-
+.nameStars{
+  max-width: 260px;
+  margin-right: -2rem;
 }
+
+
 
 .cartMainDiv img{
     overflow: hidden;
@@ -42,7 +42,7 @@ top: 0.9rem;
 }
 
 .quantityDiv{
-    right: 1rem;
+    margin-left: 3rem;
     display: flex;
     align-items: center;
     gap: 0.5rem;
@@ -58,11 +58,11 @@ top: 0.9rem;
 .rightProd {
     display: flex;
     position: absolute;
-    right: 9rem;
+    right: 6rem;
     justify-content: center;
     align-content: center;
     justify-items: center;
-    gap: 5rem;
+    gap: 2rem;
     top: 2.5rem;
 }
 .discountedPrice {
@@ -102,11 +102,12 @@ top: 0.9rem;
 }
 
 .description-text {
-    max-width: 400px; /* limit height */
+    max-width: 500px; 
     position: relative;
     top: 4.3rem;
+    margin-left: -19rem;
     display: -webkit-box;
-    -webkit-line-clamp: 1; /* number of lines you want */
+    -webkit-line-clamp: 1; 
     -webkit-box-orient: horizontal;
     color: #00356b5f;
 }
@@ -124,6 +125,11 @@ top: 0.9rem;
 
 .seeOrders:hover {
   font-size: 1.29rem;
+}
+.cartProdName {
+  position: relative;
+  left: 0;
+  max-width: 250px;
 }
 
 .emptyCart {
@@ -159,29 +165,36 @@ height: 3.5rem;
 }
 
 .stars {
-    
+    position: relative;
     font-size: 1.21rem;
-    margin-top: 0.3rem;
+    top: 0.5rem;
     
   }
 
-  .full-star {
-    color: rgb(176, 150, 0);
-  }
-  .half-star {
-    color: goldenrod;
-  }
-  .empty-star {
-    color: lightgray;
-  }
+.stars i {
+  font-size: 1.4rem;
+  margin-right: 2px;
+}
 
-  .fa-star {
-    font-size: larger;
-  }
+.full-star {
+  color: goldenrod;
+}
+
+.half-star {
+  color: goldenrod;
+}
+
+.empty-star {
+  color: lightgray;
+}
 
   .description-text {
     max-height: 60px; /* limit height */
     overflow: hidden;
+    overflow-y: auto;
+    max-width: 200px;
+    left: 19rem;
+    position: relative;
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 1; /* number of lines you want */
