--- a/src/app/user-interface/user-interface.component.scss
+++ b/src/app/user-interface/user-interface.component.scss
@@ -208,10 +208,26 @@ z-index: 9999999;
 .scrollerOrd {
     display: flex;
     flex-direction: column;
+    gap: 0.3rem;
     width: 10rem;
     overflow: hidden;
     overflow-y: auto;
+    width: 11rem;
 }
+.scrollerOrd::-webkit-scrollbar {
+  width: 12px; /* Adjust width here */
+}
+
+.scrollerOrd::-webkit-scrollbar-track {
+  background: #00b9aa; /* Track color */
+}
+
+.scrollerOrd::-webkit-scrollbar-thumb {
+  background-color: #9fb9d0; /* Scroll thumb */
+  border-radius: 4px;
+  border: 2px solid #00a7c4; /* Space around thumb */
+}
+
 
 .totalAmount {
     position: absolute;
@@ -227,11 +243,14 @@ z-index: 9999999;
 }
 .orderItems {
     width: 10rem;
-    
+    border-radius: 0.5rem;
+    background-color: rgb(0, 100, 130);
+    display: flex;
+    flex-direction: column;
 }
 .orderItems p {
 width: 9rem;
-margin-bottom: 0.4rem;
+margin-bottom: -0.2rem;
 }
 
 .orderCard {
