--- a/src/app/admin-interface/admin-interface.component.html
+++ b/src/app/admin-interface/admin-interface.component.html
@@ -8,7 +8,7 @@
   <div class="adminNav">
     <ul [class.active]="activePanel === 'orders'" (click)="switchPanel('orders')">Manage Orders</ul>
     <ul [class.active]="activePanel === 'users'" (click)="switchPanel('users')">Manage Users</ul>
-    <ul [class.active]="activePanel === 'categories'" (click)="switchPanel('categories')">Manege Categories</ul>
+    <ul [class.active]="activePanel === 'categories'" (click)="switchPanel('categories')">Manage Categories</ul>
     <ul [class.active]="activePanel === 'sales'" (click)="switchPanel('sales')">Manage Sales</ul>
   </div>
 
